# rules_nodejs

./: BUILD.bazel  commitlint.config.js  defs.bzl  package.json  providers.bzl
docs/: BUILD.bazel
examples/angular/: BUILD.bazel  README.md  package.json
examples/angular/e2e/: BUILD.bazel
examples/angular/patches/: @angular+compiler-cli+10.1.6.patch
examples/angular/src/: BUILD.bazel  tsconfig.json
examples/angular/src/app/: BUILD.bazel
examples/angular/src/app/hello-world/: BUILD.bazel
examples/angular/src/app/home/: BUILD.bazel
examples/angular/src/app/todos/: BUILD.bazel
examples/angular/src/app/todos/reducers/: BUILD.bazel
examples/angular/src/lib/shorten/: BUILD.bazel
examples/angular/src/shared/material/: BUILD.bazel
examples/angular/tools/: angular_prerender.bzl  angular_ts_project.bzl
examples/app/: BUILD.bazel  app.e2e-spec.ts
internal/e2e/rollup/: BUILD.bazel  bundle-es5_golden.js_  bundle-es5umd_golden.js_  bundle-min_golden.js.map  bundle_golden.js.map  outputgroups.spec.js  rollup.spec.js
internal/e2e/rollup2/: BUILD.bazel  foo.js
internal/e2e/rollup_fine_grained_deps/golden/: bundle.js.golden  bundle_hybrid.js.golden  bundle_legacy.js.golden  bundle_no_deps.js.golden
internal/e2e/terser/: BUILD.bazel  terser.spec.js
internal/e2e/terser/basic/: BUILD.bazel  basic.js  basic.min_golden.js.map  basic.min_golden.js_
internal/e2e/terser/dirtest/: BUILD.bazel
internal/e2e/terser/dirtest/testdir/: fum.js  index.js
internal/e2e/terser/dirtest/testdir.min_golden/: fum.js.map  fum.js_  index.js.map
internal/e2e/terser/multiple/: BUILD.bazel  first.js  first.min_golden.js.map  first.min_golden.js_  second.js  second.min_golden.js.map  second.min_golden.js_
internal/e2e/terser/multiple/testdir.min_golden/: fum.js.map  index.js.map  index.js_
internal/e2e/terser/trans-maps/: BUILD.bazel  bundle.cjs.min_golden.js.map  bundle.cjs.min_golden.js_
internal/e2e/terser/trans-maps-dir/: BUILD.bazel
internal/e2e/terser/trans-maps-dir/testdir/: bundle.cjs.js.map  bundle.umd.js.map
internal/e2e/terser/trans-maps-dir/testdir.min_golden/: bundle.cjs.js.map  bundle.umd.js.map  bundle.umd.js_
internal/node/: node_repositories.bzl  npm_package_bin.bzl
internal/providers/: node_runtime_deps_info.bzl
internal/rollup/: BUILD.bazel  merge-maps.js  package.json  rollup_bundle.bzl  tsc-directory.js  worker.js
internal/rollup2/: BUILD.bazel  bundle_types.bzl  downlevel.bzl  package.json  rollup.config.js  rollup.config.spec.js  rollup_bundle.bzl  terser-wrapped.js  terser.bzl
internal/terser/: BUILD.bazel  package.json  terser-wrapped.js  terser.bzl
