load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "node_modules_none",
)

nodejs_binary(
    name = "worker",
    data = [
        "worker.js",
        "@npm//@bazel/worker",
        "@npm//rollup",
    ],
    entry_point = ":worker.js",
    install_source_map_support = False,
    node_modules = ":node_modules_none",
)

# # BEGIN-INTERNAL
# load("@npm_bazel_jasmine//:index.from_src.bzl", "jasmine_node_test")

# # END-INTERNAL

# # BEGIN-INTERNAL
# jasmine_node_test(
#     name = "assembler_test",
#     srcs = ["assembler_spec.js"],
#     tags = [
#         "fix-windows",
#     ],
#     deps = [
#         "assembler.js",
#     ],
# )

# # END-INTERNAL
# filegroup(
#     name = "package_contents",
#     srcs = glob(
#         ["*"],
#         exclude = ["*_spec.js"],
#     ),
# )
