# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//:defs.bzl", "nodejs_binary")

licenses(["notice"])  # Apache 2.0

package(default_visibility = ["//internal:__subpackages__"])

exports_files([
    # Exported to be consumed for generating skydoc.
    "terser.bzl",
])

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "terser",
    entry_point = "@build_bazel_rules_nodejs_terser_deps//node_modules/terser:bin/uglifyjs",
    install_source_map_support = False,
    node_modules = "@build_bazel_rules_nodejs_terser_deps//:node_modules",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "terser-wrapped",
    data = [":terser-wrapped.js"],
    entry_point = ":terser-wrapped.js",
    install_source_map_support = False,
    node_modules = "@build_bazel_rules_nodejs_terser_deps//:node_modules",
    visibility = ["//visibility:public"],
)
