load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "material",
    srcs = glob(["*.ts"]),
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/material",
    ],
)
